[feat] 작가 경력 추가, 경력 기간 수정, 감정 태그 추가
- 경력 추가 # 41
  - `Career` 테이블에 경력 유형(사진 전공(PHOTO_MAJOR, 이익 창출(EARN_PROFIT), SNS 운영(SNS_MANAGE))과 작가 id를 저장
- 경력 기간 수정
  - year, month를 입력받고 (year * 12 + month) 값을 작가의 period에 저장
- 사진 감성 태그 추가 #44
  - 사진 감성을 문자열 List로 받아와서 작가와 연결해서 `PhotoMood` 테이블에 저장
- 작가 로그인
  - 고객으로 로그인한 뒤 작가로 계정 전환할 때 호출하고 작가 여부를 redis에 저장
  - 그렇게 하는 이유는, 작가인지 확인이 필요한 api에 `@PhotographerOnly` 라는 어노테이션을 달고, JWT에 담긴 memberId로 찾을 수 있는 작가인지 확인 한 뒤에 실행하기 위함
  - 우선 30분동안 작가인지 아닌지를 redis에 저장하여 작가 여부를 빠르게 확인할 수 있도록 함